<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/main_activity_heading"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtViewSmallHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/main_heading_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRequestInvite"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/request_an_invite_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />


    </LinearLayout>


</RelativeLayout>
